--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: none;
+  outline: none;
 }
-
 ul, ol, li, dl {
   list-style: none;
 }
-
 a {
   text-decoration: none;
 }
-
 img {
   max-width: 100px;
 }
-
+h1, h2, h3, h4, h5, h6 {
+  margin: 0 !important;
+}
 body{
-  font-family: sans-serif;
+  font-family: sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 2000vh;
 }
