--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,15 @@ ul, ol, li, dl {
 a {
   text-decoration: none;
 }
-img {
-  max-width: 100px;
-}
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0 !important;
 }
 body{
   font-family: sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  height: 2000vh;
+}
+::-webkit-scrollbar {
+  width: 1px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
 }
