--- a/src/page/TopNav/TopNav.css
+++ b/src/page/TopNav/TopNav.css
@@ -12,3 +12,17 @@
     gap: 10px;
     margin-left: 16px;
 }
+
+.top-navgations input  {
+    width: 622px;
+    height: 28px;
+    fill: #F0F0F0;
+    background-color: rgba(240, 240, 240, 1);
+    text-align: center;
+    border-radius: 2px;
+}
+
+.top-navgations  .Clockwise {
+    position: relative;
+    left: -30px;
+}
