add bars section links

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ ul, ol, li, dl {
 a {
   text-decoration: none;
 }
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl {
   margin: 0 !important;
 }
 body{
