--- a/src/page/SideBar/side.css
+++ b/src/page/SideBar/side.css
@@ -17,6 +17,7 @@
     border-radius: 100px;
     background: var(--White, #FFF);
     box-shadow: 0px 2px 5px 0px rgba(38, 51, 77, 0.03);
+    cursor: pointer;
 }
 .side .avatar {
     border-radius: 50%;
@@ -24,6 +25,7 @@
     width: 50px;
     height: 50px;
     overflow: hidden;
+    cursor: pointer;
 }
 .addNewUSer{
     display: flex;
@@ -35,4 +37,5 @@
     border-radius: 100px;
     background: var(--White, #FFF);
     box-shadow: 0px 2px 5px 0px rgba(38, 51, 77, 0.03);
+    cursor: pointer;
 }
