--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ a {
 }
 h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl {
   margin: 0 !important;
+  padding: 0 !important;
 }
 body{
   font-family: sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -22,4 +23,11 @@ body{
 }
 ::-webkit-scrollbar-track {
   background: #f1f1f1; 
+}
+
+.boards {
+  margin: 27px 30px 27px 30px;
+  padding: 27px 30px 30px 50px;
+  border-radius: 15px;
+  border: 2px solid rgba(237, 239, 242, 1);
 }
