--- a/src/components/headerBox/headerBox.css
+++ b/src/components/headerBox/headerBox.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 2px 5px 0px rgba(38, 51, 77, 0.03);
     padding: 10px 15px;
     position: relative;
+    margin-bottom: 30px;
 }
 
 .boxHeader::after {
